updated import of css/js in html files due to moved folder

--- a/experiment.html
+++ b/experiment.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Rating</title>
-        <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
-        <link href="../css/experiment.css" type="text/css" rel="stylesheet">
-        <script src="../js/experiment.js"></script>
-        <script src="../js/settings.js"></script>
+        <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
+        <link href="./css/experiment.css" type="text/css" rel="stylesheet">
+        <script src="./js/experiment.js"></script>
+        <script src="./js/settings.js"></script>
         <meta charset="UTF-8">
     </head>
 
