--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Start Page</title>
-        <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
-        <link href="../css/index.css" type="text/css" rel="stylesheet">
-        <script src="../js/settings.js"></script>
-        <script src="../js/index.js"></script>
+        <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
+        <link href="./css/index.css" type="text/css" rel="stylesheet">
+        <script src="./js/settings.js"></script>
+        <script src="./js/index.js"></script>
         <meta charset="UTF-8">
     </head>
     <body onload="chooseTheme('green')">
