--- a/results.html
+++ b/results.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Results</title>
-        <link href="../css/results.css" type="text/css" rel="stylesheet">
-        <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
-        <script src="../js/settings.js"></script>
-        <script src="../js/results.js"></script>
+        <link href="./css/results.css" type="text/css" rel="stylesheet">
+        <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
+        <script src="./js/settings.js"></script>
+        <script src="./js/results.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <meta charset="UTF-8">
     </head>
