same issue for image import

--- a/results.html
+++ b/results.html
@@ -11,9 +11,9 @@
     </head>
     <body onload="setUp()">
         <header class = "header">
-            <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
+            <a class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
             <h1>ViInVaRa</h1>
-            <a class="iconWrapper" onclick=""><img class="help icon" src="../media/help_icon.png" alt="Help Icon"></a>
+            <a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>
         </header>
         <main class="mainBody">
             <div class="pageContent">
