and same thing for the accordion arrow, oops

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="exp settingsContainer">
                         <div class="settingAccordionTrigger" onclick="toggleAccordion(this)">
                             Scale Settings
-                            <img id="accordionArrow" class="arrowIcon" src="../media/arrow_icon.png">
+                            <img id="accordionArrow" class="arrowIcon" src="./media/arrow_icon.png">
                         </div>
                         <div class="settingAccordion">
                             <div class="settingRow">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="settingAccordionTrigger" onclick="toggleAccordion(this)">
                             Interval Settings
-                            <img id="accordionArrow" class="arrowIcon" src="../media/arrow_icon.png">
+                            <img id="accordionArrow" class="arrowIcon" src="./media/arrow_icon.png">
                         </div>
                         <div class="settingAccordion">
                             <div class="settingRow">
@@ -95,7 +95,7 @@
                         </div>
                         <div class="settingAccordionTrigger" onclick="toggleAccordion(this)">
                             Rating Behaviour Settings
-                            <img id="accordionArrow" class="arrowIcon" src="../media/arrow_icon.png">
+                            <img id="accordionArrow" class="arrowIcon" src="./media/arrow_icon.png">
                         </div>
                         <div class="settingAccordion">
                             <div class="settingRow">
