--- a/results.html
+++ b/results.html
@@ -30,8 +30,8 @@
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">08/04/2025</span>
-            <span class="footerNote">V0.13 (Demo 1)</span>
+            <span class="footerNote">10/04/2025</span>
+            <span class="footerNote">V0.15</span>
             <span class="footerNote">Linda Steiner</span>
             <span class="footerNote">VarSLA</span>
         </footer>
