margin correction on sound row

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                                 yes
                             </div>
                             <div class="settingRow">
-                                <b style="float: left; margin-left: 5px">Notification Sound at Interval:</b> 
-                                <select id="notificationSound" onchange="setSound()" style="float: left; margin-left: 5px">
+                                <b style="float: left; margin-right: 5px">Notification Sound at Interval:</b> 
+                                <select id="notificationSound" onchange="setSound()" style="float: left; margin-right: 5px">
                                     <option value="none">None (silent)</option>
                                     <option value="bubbles.mp3">Bubbles</option>
                                     <option value="chime.mp3">Chime</option>
