small visual improvements in terms of colors, added favicon, rating now possible via number keys (position, not value)

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>Welcome</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/index.css" type="text/css" rel="stylesheet">
         <script src="./js/settings.js"></script>
         <script src="./js/index.js"></script>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
+        <!--Font in icon: league spartan-->
     </head>
-    <body onload="chooseTheme('green')">
+    <body onload="chooseTheme('blue')">
         <header class = "header">
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
             <h1>ViInVaRa</h1>
@@ -139,10 +141,10 @@
             </audio>
         </main>
         <footer class = "footer">
-            <span class="footerNote">11/04/2025</span>
-            <span class="footerNote">V0.16</span>
+            <span class="footerNote">12/04/2025</span>
+            <span class="footerNote">V0.18</span>
             <span class="footerNote">Linda Steiner</span>
-            <span class="footerNote">VarSLA</span>
+            <span class="footerNote">UZH - Zurich</span>
         </footer>
     </body>
 </html>
