--- a/results.html
+++ b/results.html
@@ -9,6 +9,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
+        <!--Font in icon: league spartan-->
     </head>
     <body onload="setUp()">
         <header class = "header">
@@ -43,10 +45,10 @@
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">11/04/2025</span>
-            <span class="footerNote">V0.16</span>
+            <span class="footerNote">12/04/2025</span>
+            <span class="footerNote">V0.18</span>
             <span class="footerNote">Linda Steiner</span>
-            <span class="footerNote">VarSLA</span>
+            <span class="footerNote">UZH - Zurich</span>
         </footer>
     </body>
 </html>
