--- a/experiment.html
+++ b/experiment.html
@@ -7,6 +7,8 @@
         <script src="./js/experiment.js"></script>
         <script src="./js/settings.js"></script>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
+        <!--Font in icon: league spartan-->
     </head>
 
     <body onload="setup()">
@@ -32,10 +34,10 @@
             </audio>
         </main>
         <footer class = "footer">
-            <span class="footerNote">11/04/2025</span>
-            <span class="footerNote">V0.16</span>
+            <span class="footerNote">12/04/2025</span>
+            <span class="footerNote">V0.18</span>
             <span class="footerNote">Linda Steiner</span>
-            <span class="footerNote">VarSLA</span>
+            <span class="footerNote">UZH - Zurich</span>
         </footer>
     </body>
 </html>
