--- a/results.html
+++ b/results.html
@@ -4,10 +4,11 @@
         <title>Results</title>
         <link href="./css/results.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.9/dist/chart.umd.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.1.0/dist/chartjs-plugin-annotation.min.js"></script>        
+        <!-- script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.1.0/dist/chartjs-plugin-annotation.drag.min.js" defer></script> !-->
         <script src="./js/settings.js"></script>
         <script src="./js/results.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
         <!--Font in icon: league spartan-->
