--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
                 <div class="textPanel">
                     <h1>ViInVaRa</h1>
                     <h2>Video Interval Variable Rater</h2>
-                    <h2>Based on MacIntyre's Idiodynamic Software</h2>
                     <p>
-                        This software can be used for experiments wherein a variable has to be rated on a scale while watching a video. The results are presented as a graph and can be downloaded as a CSV table.</br>
-                        This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Software</a>.
+                        This software can be used for experiments wherein a variable has to be rated on a scale while watching a video. The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
+                        This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/ the Anion Variable Tester</a>.
                     </p>
                 </div>
                 <section class="settings">
@@ -130,6 +129,33 @@
                                 <label for="leaveOut">leave out</label><br>
                             </div>
                         </div>
+                        <div class="settingAccordionTrigger" onclick="toggleAccordion(this)">
+                            Video Settings
+                            <img id="accordionArrow" class="arrowIcon" src="./media/arrow_icon.png">
+                        </div>
+                        <div class="settingAccordion">
+                            <div class="settingRow">
+                                <b>Show video controls during experiment:</b> 
+                                no
+                                <label class="switch">
+                                    <input type="checkbox" id="vcChecker" onchange="updateControlSettings()">
+                                    <span class="slider"></span>
+                                </label>
+                                yes
+                            </div>
+                            <div id="fullScreenSwitch" class="settingRow" style = "display: none">
+                                <b>Allow Fullscreen:</b> 
+                                no
+                                <label class="switch">
+                                    <input type="checkbox" id="fullscreenChecker">
+                                    <span class="slider"></span>
+                                </label>
+                                yes
+                            </div>
+                            <div class="settingRow">
+                                <i>(video file selected on next screen)</i>
+                            </div>
+                        </div>
                     </div>
                     <div class="startButtonContainer">
                         <button class="startButton" onclick="loadExperiment()">Start Experiment</button>
@@ -141,8 +167,8 @@
             </audio>
         </main>
         <footer class = "footer">
-            <span class="footerNote">06/05/2025</span>
-            <span class="footerNote">V1.1</span>
+            <span class="footerNote">07/05/2025</span>
+            <span class="footerNote">V1.2</span>
             <span class="footerNote">Linda Steiner</span>
             <span class="footerNote">UZH - Zurich</span>
         </footer>
