copyright mark added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h2>Video Interval Variable Rater</h2>
                     <p>
                         This software can be used for experiments wherein a variable has to be rated on a scale while watching a video. The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
-                        This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/ the Anion Variable Tester</a>.
+                        This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/the Anion Variable Tester</a>.
                     </p>
                 </div>
                 <section class="settings">
@@ -169,7 +169,7 @@
         <footer class = "footer">
             <span class="footerNote">07/05/2025</span>
             <span class="footerNote">V1.2</span>
-            <span class="footerNote">Linda Steiner</span>
+            <span class="footerNote">© Linda Steiner</span>
             <span class="footerNote">UZH - Zurich</span>
         </footer>
     </body>
