--- a/results.html
+++ b/results.html
@@ -47,7 +47,7 @@
         <footer class = "footer">
             <span class="footerNote">07/05/2025</span>
             <span class="footerNote">V1.2</span>
-            <span class="footerNote">Linda Steiner</span>
+            <span class="footerNote">© Linda Steiner</span>
             <span class="footerNote">UZH - Zurich</span>
         </footer>
     </body>
