updated footer content and link colour

--- a/results.html
+++ b/results.html
@@ -45,10 +45,11 @@
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">07/05/2025</span>
-            <span class="footerNote">V1.2</span>
-            <span class="footerNote">© Linda Steiner</span>
+            <span class="footerNote">14/05/2025</span>
+            <span class="footerNote">V1.3</span>
+            <span class="footerNote">© Linda Steiner (linste.zh@gmail.com)</span>
             <span class="footerNote">UZH - Zurich</span>
+            <span class="footerNote"><a href="https://github.com/linste-zh/ViInVaRa">Project Git Page</a></span>
         </footer>
     </body>
 </html>
