open git link in new tab

--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
             <span class="footerNote">V1.3</span>
             <span class="footerNote">© Linda Steiner (linste.zh@gmail.com)</span>
             <span class="footerNote">UZH - Zurich</span>
-            <span class="footerNote"><a href="https://github.com/linste-zh/ViInVaRa">Project Git Page</a></span>
+            <span class="footerNote"><a href="https://github.com/linste-zh/ViInVaRa" target="_blank">Project Git Page</a></span>
         </footer>
     </body>
 </html>
