--- a/experiment.html
+++ b/experiment.html
@@ -7,8 +7,8 @@
         <script src="./js/experiment.js"></script>
         <script src="./js/settings.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
-        <!--Font in icon: league spartan-->
+        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <!--Font in icon: Imprint MT Shadow-->
     </head>
 
     <body onload="setup()">
