--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script src="./js/settings.js"></script>
         <script src="./js/index.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
-        <!--Font in icon: league spartan-->
+        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body onload="chooseTheme('blue')">
         <header class = "header">
@@ -25,10 +25,11 @@
                     <button class="themeOption gray" onclick="chooseTheme('gray')"></button>
                 </div>
                 <div class="textPanel">
-                    <h1>ViInVaRa</h1>
-                    <h2>Video Interval Variable Rater</h2>
+                    <h1>Viinvara</h1>
+                    <h2>The <b>Vi</b>deo <b>In</b>terval <b>Va</b>riable <b>Ra</b>ter</h2>
                     <p>
-                        This software can be used for experiments wherein a variable has to be rated on a scale while watching a video. The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
+                        This software allows the rating of a variable on some scale at regular intervals while watching a video.</br>
+                        The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
                         This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/the Anion Variable Tester</a>.
                     </p>
                 </div>
