--- a/results.html
+++ b/results.html
@@ -9,8 +9,8 @@
         <script src="./js/settings.js"></script>
         <script src="./js/results.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/ViInVaRa.ico?">
-        <!--Font in icon: league spartan-->
+        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body onload="setUp()">
         <header class = "header">
