ViInVaRa -> Viinvara inlcuding links, fix scaling of graph in results)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body onload="chooseTheme('blue')">
         <header class = "header">
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
-            <h1>ViInVaRa</h1>
+            <h1>Viinvara</h1>
             <!--<a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>-->        
         </header>
         <main class="mainBody">
@@ -28,7 +28,7 @@
                     <h1>Viinvara</h1>
                     <h2>The <b>Vi</b>deo <b>In</b>terval <b>Va</b>riable <b>Ra</b>ter</h2>
                     <p>
-                        This software allows the rating of a variable on some scale at regular intervals while watching a video.</br>
+                        Viinvara allows the rating of a variable on some scale at regular intervals while watching a video.</br>
                         The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
                         This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/the Anion Variable Tester</a>.
                     </p>
@@ -172,7 +172,7 @@
             <span class="footerNote">V1.3</span>
             <span class="footerNote">© Linda Steiner (linste.zh@gmail.com)</span>
             <span class="footerNote">UZH - Zurich</span>
-            <span class="footerNote"><a href="https://github.com/linste-zh/ViInVaRa" target="_blank">Project Git Page</a></span>
+            <span class="footerNote"><a href="https://github.com/linste-zh/viinvara" target="_blank">Project Git Page</a></span>
         </footer>
     </body>
 </html>
