--- a/results.html
+++ b/results.html
@@ -12,11 +12,11 @@
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
-    <body onload="setUp()">
+    <body onload="setUp()" onresize="refresh()">
         <header class = "header">
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
-            <h1>ViInVaRa</h1>
-            <!--<a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>-->
+            <h1>Viinvara</h1>
+            <!--<a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>-->        
         </header>
         <main class="mainBody">
             <div class="pageContent">
@@ -49,7 +49,7 @@
             <span class="footerNote">V1.3</span>
             <span class="footerNote">© Linda Steiner (linste.zh@gmail.com)</span>
             <span class="footerNote">UZH - Zurich</span>
-            <span class="footerNote"><a href="https://github.com/linste-zh/ViInVaRa" target="_blank">Project Git Page</a></span>
+            <span class="footerNote"><a href="https://github.com/linste-zh/viinvara" target="_blank">Project Git Page</a></span>
         </footer>
     </body>
 </html>
