record second of submission, update on how current time stamp is saved, changes to how video is loaded, started to modularise js files (I have not commited in a while because new things kept popping up, bad idea)

--- a/experiment.html
+++ b/experiment.html
@@ -4,14 +4,16 @@
         <title>Rating</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/experiment.css" type="text/css" rel="stylesheet">
-        <script src="./js/experiment.js"></script>
+        <script type="module" src="./js/experiment.js"></script>
         <script src="./js/settings.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
 
-    <body onload="setup()">
+    
+
+    <body>
         <header class = "header">
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
             <h1>Viinvara</h1>
@@ -43,4 +45,3 @@
         </footer>
     </body>
 </html>
-
