--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                     <img src="./media/help_icon.png" class="tooltipSymbol" onclick="openInfoBox('notRated')">
                                 </div>  
                                 <div>
-                                    <input type="radio" id="emergencyPause" class="radioButton" name="notRatedBehaviour" value="pause">
+                                    <input type="radio" id="emergencyPause" class="radioButton" name="notRatedBehaviour" value="pause" checked="checked">
                                     <label for="emergencyPause">pause</label>
                                 </div>
                                 <div>
@@ -141,7 +141,7 @@
                                     <label for="neutralRate">rate neutral</label>
                                 </div>
                                 <div>
-                                    <input type="radio" id="leaveOut" class="radioButton" name="notRatedBehaviour" value="empty" checked="checked">
+                                    <input type="radio" id="leaveOut" class="radioButton" name="notRatedBehaviour" value="empty">
                                     <label for="leaveOut">leave out</label>
                                 </div>
                             </div>
